--- a/login.html
+++ b/login.html
@@ -3,7 +3,6 @@
         <title>My app</title>
     </head>
     <body>
-        this is my app
-        login
+        Login page
     </body>
 </html>
